our js will now call the tabs method on all elements with the "tabs" class

--- a/groups/templates/groups/group_edit.html
+++ b/groups/templates/groups/group_edit.html
@@ -23,7 +23,7 @@
     Edit Team
 {% endblock %}
 {% block right_content %}
-    <div id="group_edit_tabs">
+    <div id="group_edit_tabs" class="tabs">
         <ul>
             <li><a href="#group_tab">Team</a></li>
             <li><a href="#members_tab">Members</a></li>
