--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -2,7 +2,7 @@
 
 {% block right_content %}
     <h1>Edit your Profile</h1>
-    <div id="profile_edit_tabs">
+    <div id="profile_edit_tabs" class="tabs">
         <ul>
             <li><a href="#account_tab">Account</a></li>
             <li><a href="#notifications_tab">Notifications</a></li>
