--- a/events/templates/events/show.html
+++ b/events/templates/events/show.html
@@ -6,28 +6,24 @@
         <div class="box_two_top"></div>
         <div class="box_two_middle">
             <h1>{{ event }}</h1>
-    
             <div>
                 <h3>Description</h3>
                 <p>{{ event.event_type.description }}</p>
             </div>
-        
             <div>
                 <h3>Details</h3>
                 <p>{{ event.details }}</p>
             </div>
-        
             <div>
                 <h3>When</h3>
                 <p>{{ event.when|date }} from {{ event.start|time }} to {{ event.end|time }}</p>
             </div>
-        
             <div>
                 <h3>Where</h3>
                 <p>{{ event.where }}<br />{{ event.location }}</p>
                 <img src="http://maps.google.com/maps/api/staticmap?markers=color:blue|{{ event.place|urlencode }}&zoom=12&size=400x200&sensor=false"
                     alt="{{ event.place }} map" />
-            </div>    
+            </div>
         </div>
         <div class="box_two_bottom"></div>
      
@@ -41,7 +37,7 @@
     </div>
      
     <div class="grid_3 omega">
-        {% if request.user.pk == event.creator.pk %}
+        {% if request.user == event.creator %}
             <div class="box_one_top"></div>
             <div class="box_one_middle">
                 <p><a class="button" href="{% url event-edit event.id %}">Edit Event</a></p>
