--- a/templates/base.html
+++ b/templates/base.html
@@ -76,6 +76,7 @@
                                 {% block left_sidebar %}{% endblock left_sidebar %}
                             </div>
                             <div class="grid_9 omega">
+                                <div id="breadcrumbs">{% block breadcrumbs %}{% endblock breadcrumbs %}</div>
                                 {% block right_content %}{% endblock right_content %}
                             </div>
                         {% endblock content %}
