--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,10 +1,17 @@
 {% extends "rah/base.html" %}
-{% block content %}
-<form action="" method="post" autocomplete="false">
-    {% include "rah/_overset_form.html" %}
-    <p><input type="submit" value="Reset password" /></p>
-    {% csrf_token %}
-</form>
-<a href="{% url django.contrib.auth.views.login %}">Log in</a> | 
-<a href="{% url rah.views.register %}">Register</a>
+{% block right_content %}
+<div class="prefix_3">
+    <div class="box_two_top"></div>
+    <div class="box_two_middle">
+        <h1>Reset your password</h1>
+        <form action="" method="post" autocomplete="false">
+            {% include "rah/_overset_form.html" %}
+            <p><input type="submit" value="Reset password" /></p>
+            {% csrf_token %}
+        </form>
+        <a href="{% url django.contrib.auth.views.login %}">Log in</a> | 
+        <a href="{% url rah.views.register %}">Register</a>
+    </div>
+    <div class="box_two_bottom"></div>
+</div>
 {% endblock %}
