--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,7 @@ h1, h1 a {
 h2, h3, h4, h5, h6 { font-weight:bold; color: #172950;}
 h1 { font-size: 30px; line-height:45px; }
 h2 { font-size: 20px; line-height:27px; }
-h3 { font-size: 18px; line-height:27px; }
+h3 { font-size: 18px; line-height:24px; }
 h4 { font-size: 16px; line-height:21px; }
 h5 { font-size: 14px; }
 h6 { font-size: 12px; }
@@ -135,10 +135,7 @@ a.button:hover { color: white; }
     color: #DE6060;
     background-color: transparent;
     width: 320px;}
-/* Login signup register page*/
-#login_form, #registration_form {margin-top:50px;}
-#login_form {margin-left:90px;}
-#registration_form { margin-left:60px;}
+
 
 
 /* ---------------------------------------------------------------------------------------------------------------------
@@ -361,12 +358,16 @@ Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Ch
 /* ---------------------------------------------------------------------------------------------------------------------
 Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions 
 --------------------------------------------------------------------------------------------------------------------- */
-.action_nugget { float:left; width:210px; margin: 0px 0px 10px 0; padding:15px; position: relative; background-color: #E4F0FA; -moz-border-radius: 18px; -webkit-border-radius: 18px; border-radius: 18px;}
-/*.action_nugget_teaser p { color: #74a01f;}*/
-/*.action_nugget a { color: #2f6c35; }*/
-.action_nugget_title {margin-bottom:10px;}
-.action_nugget_points { float:right; font-weight: bold;}
-.action_nugget_tags {margin-top:35px; margin-bottom:15px;}
+.action_nugget {float:left; margin-right:13px;}
+.action_nugget .box_one_middle {min-height:177px;}
+
+.action_nugget_status { float:left; font-weight:bold;}
+.action_nugget_points { text-align:right; font-weight: bold;}
+.action_nugget img {  margin-top:3px;}
+.action_nugget_title {max-height:48px; overflow:hidden;}
+.action_nugget_teaser {max-height:54px; overflow:hidden;}
+
+.action_nugget_wrapper_three { width:729px;}
 #action_title { margin-bottom: 10px; }
 #action_content object {
     padding: 9px;
@@ -386,16 +387,8 @@ Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions 
 .action_detail_task { margin-left:40px; }
 .action_complete_form, .action_commit_form, .action_undo_form {
     float: left;
-/*    margin: 10px 5px;*/
     text-align: center; }
 .action_committment, .action_undo { font-size: 12px; }
-
-/* Minor Nav */
-#minor_nav {list-style-type: none;}
-#minor_nav li { border-bottom: 1px solid #5fbdcc; padding:7px; font-size:16px;}
-#minor_nav li a {color:#9c9c9c;}
-#minor_nav li a:hover {color:#5fbdcc;}
-.minor_nav_last {border-bottom: none !important;}
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Comments Comments Comments Comments Comments Comments Comments Comments Comments Comments Comments Comments Comments
@@ -618,7 +611,7 @@ Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc 
     margin-right:12px;
     border:1px solid #333;}
 .atom_link { margin-left: 5px; }
-#breadcrumbs {font-size:12px; }
+#breadcrumbs {font-size:12px; padding-top:12px;}
 .smaller {font-size:12px;}
 .blog_byline {}
 .post_body li,
