--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,28 +1,36 @@
 {% extends "rah/base.html" %}
 {% block content %}
-    <div class="grid_2 alpha">
-    	<form action="{% url login %}" method="post" id="login_form" autocomplete="off">
-    		<h1>Sign In</h1>
-            {% with login_form as form %}
-                         {% include "rah/_overset_form.html" %}
-            {% endwith %}
-    	    <p>
-    	        <input type="submit" value="Login" /> | <a href="{% url password_reset %}">Recover password</a>
-    	    </p>
-    	    {% csrf_token %}
-    		<p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
-    	</form>
+    <div class="grid_6 alpha">
+        <div class="box_two_top"></div>
+        <div class="box_two_middle">
+        	<form action="{% url login %}" method="post" id="login_form" autocomplete="off">
+        		<h1>Sign In</h1>
+                {% with login_form as form %}
+                             {% include "rah/_overset_form.html" %}
+                {% endwith %}
+        	    <p>
+        	        <input type="submit" value="Login" /> | <a href="{% url password_reset %}">Recover password</a>
+        	    </p>
+        	    {% csrf_token %}
+        		<p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
+        	</form>
+        </div>
+        <div class="box_two_bottom"></div>
     </div>
-    <div class="grid_2 omega">
-    	<form action="{% url register %}" method="post" id="registration_form" autocomplete="off">
-    		<h1>Create an account</h1>
-    		{% with register_form as form %}
-    	    	{% include "rah/_overset_form.html" %}
-    		{% endwith %}
-    		<p><input type="submit" value="Register" id="register_submit"/></p>
-    	    <p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
-    	    {% csrf_token %}
-    	</form>
+    <div class="grid_6 omega">
+        <div class="box_two_top"></div>
+        <div class="box_two_middle">
+        	<form action="{% url register %}" method="post" id="registration_form" autocomplete="off">
+        		<h1>Create an account</h1>
+        		{% with register_form as form %}
+        	    	{% include "rah/_overset_form.html" %}
+        		{% endwith %}
+        		<p><input type="submit" value="Register" id="register_submit"/></p>
+        	    <p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
+        	    {% csrf_token %}
+        	</form>
+        </div>
+        <div class="box_two_bottom"></div>
     </div>
 {% endblock %}
 {% block js %}page_register{% endblock %}
