--- a/events/templates/events/guests_add.html
+++ b/events/templates/events/guests_add.html
@@ -18,7 +18,11 @@
                     </form>
                 </div>
                 <div id="guests_add_without_invite">
-
+                    <form action="{% url event-guests-add event.id %}" method="post">
+                        {{ guest_add_form.as_p }}
+                        {% csrf_token %}
+                        <input type="submit" value="Send" />
+                    </form>
                 </div>
             </div>
         </div>
