--- a/actions/templates/actions/vampire_power/_directions.html
+++ b/actions/templates/actions/vampire_power/_directions.html
@@ -1,12 +1,18 @@
 <h2>Tools of the trade</h2>
 <div>
-    There are three ways stop vampire power:
+    <p>There are three ways stop vampire power:</p>
     <ul>
-        <li>Unplug the vampire when you’re not using it</li>
-        <li>Attach it to a power strip, and turn that power strip off when you’re done using it 
-            (<a class="tooltip" href="{% url power_strip_help %}">learn more</a>)</li>
-        <li>Attach it to a smart power strip, which automatically cuts power to vampires 
-            (<a class="tooltip" href="{% url smart_power_strip_help %}">learn more</a>)</li>
+        <li>
+            <b>Unplug</b> the vampire when you’re not using it
+        </li>
+        <li>
+            Attach it to a <a class="tooltip" href="{% url power_strip_help %}"><b>regular power strip</b></a>, 
+            and turn that power strip off when you’re done using it 
+        </li>
+        <li>
+            Attach it to a <a class="tooltip" href="{% url smart_power_strip_help %}"><b>smart power strip</b></a>, 
+            which automatically cuts power to vampires 
+        </li>
     </ul>
 </div>
 <p>
