--- a/actions/templates/actions/vampire_power/_vampire_worksheet_forms.html
+++ b/actions/templates/actions/vampire_power/_vampire_worksheet_forms.html
@@ -1,3 +1,10 @@
+</div>
+<div class="box_two_bottom"></div>
+
+<div class="box_two_top"></div>
+<div class="box_two_middle">
+    
+
 <div id="vampire_worksheet">
     <ul id="vampire_worksheet_wizard_nav">
         <li class="hidden"><a id="t0" href="#get_started"></a></li>
@@ -35,3 +42,10 @@
         var vampire_worksheet_started = true;
     </script>
 {% endif %}
+
+</div>
+<div class="box_two_bottom"></div>
+    
+<div class="box_two_top"></div>
+<div class="box_two_middle">
+    
