--- a/actions/templates/actions/_action_nugget.html
+++ b/actions/templates/actions/_action_nugget.html
@@ -4,6 +4,19 @@
         {# <div class="action_nugget_status"> #}
         {#     Due in 323 days #}
         {# </div> #}
+        
+        {% if action.completed %}
+            <div class="action_nugget_status green">Completed</div>
+        {% else %}
+            {% if action.committed %}
+                <div class="action_nugget_status red">Due {{action.committed|date:"N jS"}}</div>
+            {% else %}
+                {% if user.is_authenticated %}
+                    <div class="action_nugget_status blue_light">Not Started</div>
+                {% endif %}
+            {% endif %}
+        {% endif %}
+        
         <div class="action_nugget_points">{{ action.points }} Points</div>
         {% if action.has_illustration %}
             <a href="{% url action_detail action.slug %}">
