--- a/static/css/style.css
+++ b/static/css/style.css
@@ -360,31 +360,21 @@ Actions Actions Actions Actions Actions Actions Actions Actions Actions Actions 
 --------------------------------------------------------------------------------------------------------------------- */
 .action_nugget {float:left; margin-right:13px;}
 .action_nugget .box_one_middle {min-height:177px;}
-
 .action_nugget_status { float:left; font-weight:bold;}
 .action_nugget_points { text-align:right; font-weight: bold;}
 .action_nugget img {  margin-top:3px;}
 .action_nugget_title {max-height:48px; overflow:hidden;}
 .action_nugget_teaser {max-height:54px; overflow:hidden;}
-
 .action_nugget_wrapper_three { width:729px;}
 #action_title { margin-bottom: 10px; }
-#action_content object {
+#action_details object {
     padding: 9px;
     background-color: #D1DDE8;
     -moz-border-radius: 9px;
     -webkit-border-radius: 9px;
     border-radius: 9px; }
-#action_content li { list-style: disc; }
-#action_content img {margin:9px;}
-.action_detail_task_container { position:relative; }
-.action_detail_task_checkbox {
-    width:30px;
-    height:30px;
-    position: absolute;
-    top:-5px;
-    left:0px; }
-.action_detail_task { margin-left:40px; }
+#action_details li { list-style: disc; }
+#action_details img {margin:9px;}
 .action_complete_form, .action_commit_form, .action_undo_form {
     float: left;
     text-align: center; }
@@ -517,86 +507,44 @@ Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged Flagged 
 /* ---------------------------------------------------------------------------------------------------------------------
 Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire Vampire 
 --------------------------------------------------------------------------------------------------------------------- */
-#vampire_worksheet {
-    width: 650px;
-    height: 550px;
-    margin: 10px 0;
-    padding: 10px;
-    position: relative;
-/*    border: 3px solid #92C139;*/
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background-color: #FFF;
-    -moz-box-shadow: -3px 3px 4px #666;
-    -webkit-box-shadow: -3px 3px 4px #666;
-    box-shadow: -3px 3px 4px #666;
-    /* For IE 8 */
-    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#666666')";
-    /* For IE 5.5 - 7 */
-    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#666666'); }
-#vampire_worksheet_wizard_nav {
+#vampire_worksheet { position: relative; }
+ul#vampire_worksheet_wizard_nav {
     display: none;
-    float: right;
+    background-color:#FFF;
     position: absolute;
     right: 0;
-    margin-right: 15px;
-    z-index: 1; }
+    z-index: 1; 
+    margin-left: 0px;
+    padding-left: 0px;
+    padding-bottom: 0px; }
 #vampire_worksheet_wizard_nav li { 
     float: left;
     list-style: none;
-    padding: 5px;
     margin: 3px;
-    -moz-border-radius: 8px; 
-    -webkit-border-radius: 8px;
-    border-radius: 8px;
-    background-color: #E4F0FA;
     cursor: pointer; }
-#vampire_worksheet_wizard_nav li a { 
-    text-decoration: none; }
-#vampire_worksheet_wizard_nav li.active, #vampire_worksheet_wizard_nav li:hover { 
-    background-color: #E3EC9F; }
+#vampire_worksheet_wizard_nav li a { text-decoration: none; }
+#vampire_worksheet_wizard_nav li.active a { color:#333; font-weight:bold;}
 #vampire_worksheet_wizard {
-    width: 650px;
-    height: 550px;
+    height: 300px;
     position: relative;
     overflow: hidden;
     clear: both; }
-#vampire_worksheet_wizard .items { 
+#vampire_worksheet_wizard ul.items { 
     width: 20000em;
     clear: both;
     position: absolute;
-    margin-left: -20px; }
+    margin-left: 0px; padding-left: 0px; padding-bottom:18px;}
 #vampire_directions li { list-style: disc; }
-#vampire_worksheet_wizard .worksheet { 
-    margin: 30px; 
-    width: 630px; 
-    float: left;
-    list-style: none; }
+#vampire_worksheet_wizard .worksheet { width: 432px; float: left; list-style: none; }
 #vampire_worksheet_wizard .vampire_device_image { float: left; }
 #vampire_worksheet_wizard .vampire_savings_container { float: left; }
-#vampire_worksheet_wizard .vampire_savings { font-size: 1.2em; font-weight: bold; }
-#vampire_worksheet_wizard .device_button {
-    list-style: none;
-    width: 150px;
-    height: 50px !important;
-    font-size: 12px;
-    float: left; }
-#vampire_worksheet_wizard .buttonset .ui-button-text { height: 43px; display: table-cell; vertical-align: middle; }
+#vampire_worksheet_wizard .vampire_savings {  font-weight: bold; }
+#vampire_worksheet_wizard .buttonset { margin-left: 0px; padding-bottom: 0px; padding-left: 0px; }
+#vampire_worksheet_wizard .device_button { list-style: none; font-size: 12px; float: left; }
+#vampire_worksheet_wizard .buttonset .ui-button-text { height: 50px; width: 76px; display: table-cell; vertical-align: middle; }
 #vampire_worksheet_wizard .slayer_help_wrapper { font-weight: bold; text-align: center; }
 #vampire_worksheet_wizard .slayer_recommended { font-weight: bold; color: #92C139; text-align: center; }
-#vampire_plan {
-    background-color: #E4F0FA;
-}
-#vampire_plan th {
-    color: #00AAD8;
-    font-weight: bold;
-    background-color: #B0D8F2;
-}
-#vampire_plan .col-1 { width: 200px; }
-#vampire_plan tr { border: 1px solid #FFF; }
-#vampire_plan th, #vampire_plan td { border: 0; padding: 8px 5px; }
-#vampire_plan a { text-decoration: underline; }
+#vampire_plan .col-1 { width: 150px; }
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc 
@@ -616,12 +564,7 @@ Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc 
 .blog_byline {}
 .post_body li,
 #terms_of_use li,
-#privacy_policy { 
-    list-style: disc; }
-.qtip {
-    opacity:0.9;
-    filter:alpha(opacity=9)
-}
+#privacy_policy { list-style: disc; }
 
 /* spite icons */
 .icon_gt {background: url(../images/theme/0000000001_sprite_minor_col.png) -20px -303px; width:5px; height:10px; display:inline-block;}
@@ -1044,7 +987,7 @@ JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI JqueryUI
     font-family:"superclarendon-1", "superclarendon-2", serif !important;
     font-weight:700;
     font-style: normal;
-    text-transform: uppercase;
+/*    text-transform: uppercase;*/
     display: inline-block; position: relative; padding: 0; margin-right: .1em; text-decoration: none !important; cursor: pointer; text-align: center; zoom: 1; overflow: visible; } /* the overflow property removes extra width in IE */
 .ui-button-icon-only { width: 2.2em; } /* to make room for the icon, a width needs to be set here */
 button.ui-button-icon-only { width: 2.4em; } /* button elements seem to need a little more width */
@@ -1053,12 +996,12 @@ button.ui-button-icons-only { width: 3.7em; }
 
 /*button text element */
 .ui-button .ui-button-text { display: block; line-height: 1.4;  }
-.ui-button-text-only .ui-button-text { padding: .4em 1em; }
-.ui-button-icon-only .ui-button-text, .ui-button-icons-only .ui-button-text { padding: .4em; text-indent: -9999999px; }
-.ui-button-text-icon .ui-button-text, .ui-button-text-icons .ui-button-text { padding: .4em 1em .4em 2.1em; }
+.ui-button-text-only .ui-button-text { padding: 3px 14px; }
+.ui-button-icon-only .ui-button-text, .ui-button-icons-only .ui-button-text { padding: 3px; text-indent: -9999999px; }
+.ui-button-text-icon .ui-button-text, .ui-button-text-icons .ui-button-text { padding: 3px 1em 3px 2.1em; }
 .ui-button-text-icons .ui-button-text { padding-left: 2.1em; padding-right: 2.1em; }
 /* no icon support for input elements, provide padding by default */
-input.ui-button { padding: .4em 1em; }
+input.ui-button { padding: 3px 14px; }
 
 /*button icon element(s) */
 .ui-button-icon-only .ui-icon, .ui-button-text-icon .ui-icon, .ui-button-text-icons .ui-icon, .ui-button-icons-only .ui-icon { position: absolute; top: 50%; margin-top: -8px; }
