--- a/templates/rah/privacy_policy.html
+++ b/templates/rah/privacy_policy.html
@@ -1,7 +1,8 @@
 {% extends "rah/base.html" %}
 {% block title %}Privacy Policy{% endblock %}
-{% block content %}
-<div id="privacy_policy">
+{% block right_content %}
+<div class="box_three_top"></div>
+<div id="privacy_policy" class="box_three_middle">
     <h1>
         Privacy Policy
     </h1>
@@ -112,5 +113,6 @@
         are protecting your information.
     </p>
 </div>
+<div class="box_three_bottom"></div>
 {% endblock %}
 {% block js %}{% endblock %}
