--- a/templates/rah/terms_of_use.html
+++ b/templates/rah/terms_of_use.html
@@ -1,8 +1,9 @@
 {% extends "rah/base.html" %}
 {% block title %}Terms of Use{% endblock %}
-{% block content %}
-<div id="terms_of_use">
-	<h1>Terms of Use</h1>
+{% block right_content %}
+<div class="box_three_top"></div>
+<div id="terms_of_use" class="box_three_middle">
+    <h1>Terms of Use</h1>
     <h2>
         1. Your Acceptance
     </h2>
@@ -329,5 +330,6 @@
         IS PERMANENTLY BARRED.
     </p>
 </div>
+<div class="box_three_bottom"></div>
 {% endblock %}
 {% block js %}{% endblock %}
