--- a/actions/templates/actions/vampire_power/_get_started.html
+++ b/actions/templates/actions/vampire_power/_get_started.html
@@ -1,6 +1,6 @@
 {% load dated_static %}
 <h2>Do you have any of these?</h2>
-<img src="{% dated_static 'images/actions/eliminate-standby-vampire-power/get_started.jpg' %}" alt="getting started" width="50%"/>
+<img src="{% dated_static 'images/actions/eliminate-standby-vampire-power/get_started.jpg' %}" alt="getting started" width="432" height="126"/>
 <p>
     These are some of the thirstiest vampires in your home. Make a plan
     to reduce vampire power and you could save up to $200 this year.
